Update - .env, Index.js, Item.js, Missions.js, News.js, NewsHandler.js, Weapons.js 11.11.2023

--- a/msr-web-application/.env
+++ b/msr-web-application/.env
@@ -18,6 +18,13 @@ REACT_APP_SUGGESTIONS=$REACT_APP_SERVER_API/get-suggestions
 #files
 REACT_APP_IMAGES_PROFILE=$REACT_APP_SERVER_API/images/profile/
 REACT_APP_IMAGES_OTHER=$REACT_APP_SERVER_API/images/other/
+REACT_APP_IMAGES_NEWS=$REACT_APP_SERVER_API/images/news/
+REACT_APP_IMAGES_WEAPONS=$REACT_APP_SERVER_API/images/weapons/
+REACT_APP_IMAGES_MISSIONS=$REACT_APP_SERVER_API/images/missions/
+
+REACT_APP_MAP_MISSIONS=$REACT_APP_SERVER_API/map/missions/
+
+REACT_APP_INTRO_VIDEO=$REACT_APP_SERVER_API/video/intro/
 
 #User Auth Required
 REACT_APP_USER_HOME=$REACT_APP_SERVER_API/u/
