--- a/msr-web-application/.env
+++ b/msr-web-application/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_API=http://192.168.1.171:8080
+REACT_APP_SERVER_API=http://ip-address:8080
 
 #No Auth Required
 REACT_APP_CONTACT=$REACT_APP_SERVER_API/contact
